# spacegame-c

./: .gitignore  CMakeLists.txt  Makefile  audio.c  audio.h  error.c  error.h  file.c  file.h  flags.h  glfw_window.c  list.c  list.h  main.c  memory.c  memory.h  mmath.c  mmath.h  obj.c  obj.h  shader.c  shader.h  str_util.c  str_util.h  test.frag  test.vert  wav.c  wav.h  window.h
src/: audio.c  audio.h  error.c  error.h  file.c  file.h  flags.h  glfw_window.c  list.c  list.h  main.c  memory.c  memory.h  obj.c  obj.h  shader.c  shader.h  str_util.c  str_util.h  wav.c  wav.h  window.h
